# TWS

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  ClaudeConversation.txt  DATA_SPEC.md  README.md  ROADMAP.md  SPEC.md  USAGE_GUIDE.md  merv_wsSocket.py  requirements.txt  test_core.py  verify_math.py
.claude/: settings.json
.kiro/settings/: mcp.json
Documentation/: DATA_INVENTORY.md  DATA_SPEC.md
PPI/: Best_sharpe_ratio.py  Instrument_class.py  fetch_ohlcv.py  monteCarlo.py  rendimientos.py  sharpe_ratio.py  tempCodeRunnerFile.py
config/: __init__.py  settings.py
data/: aggregator.py  binance_loader.py  byma_client.py  cache.py  loader.py
docs/: AUDITORIA_ARQUITECTURA.md  AUDITORIA_ARQUITECTURA_v2.md  BT_DATA_INVENTORY.md  CHECKLIST.md  CHECKLIST_BACKTESTING.md  CHECKLIST_IMPLEMENTACION.md  DIAGRAMA_FLUJO_DATOS.md  HFT_BACKTEST_GUIDE.md  OPTIONS_BACKTEST_CHECKLIST.md  RESUMEN_EJECUTIVO.md
finance/: finance.sln
frontend/: index.html  package.json
job/: futuros_tick_by_tick.py  get_cookies.py  order_side.py
math/: greeks.py
mcp_server/: glpi_proxy.py  run_backtest.py  server.py
monitor/: alerting.py  data_stream.py  graphing.py  main.py  status_api.py
scrapers/: fetch.py  logger.py  notifier.py
shared/: db_pool.py  get_cookies.py
tws_terminal/: CHANGELOG.md  Cargo.toml
tws_terminal/src/: main.rs
tws_terminal/src/data/: mod.rs  order.rs  tick.rs
tws_terminal/src/db/: mod.rs
tws_terminal/src/network/: mod.rs  websocket.rs
tws_terminal/src/ui/: app.rs  event_handler.rs  mod.rs  widgets.rs
us_futures/: snapshot.py
(+226 files in other folders)
