[package]
name = "tws-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }